id1/2/3 tests pass

--- a/qmdd.vcxproj
+++ b/qmdd.vcxproj
@@ -76,6 +76,7 @@
     <None Include="cnot.tfc" />
     <None Include="id1.tfc" />
     <None Include="id2.tfc" />
+    <None Include="id3.tfc" />
     <None Include="not.tfc" />
     <None Include="packages.config" />
     <None Include="rd32.tfc" />
