--- a/qmdd.vcxproj.filters
+++ b/qmdd.vcxproj.filters
@@ -23,6 +23,12 @@
     <None Include="id3.tfc">
       <Filter>tests</Filter>
     </None>
+    <None Include="id1not1.tfc">
+      <Filter>tests</Filter>
+    </None>
+    <None Include="not1id1.tfc">
+      <Filter>tests</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="tests">
