get the graphs to look right...

--- a/qmdd.vcxproj
+++ b/qmdd.vcxproj
@@ -76,16 +76,21 @@
     <None Include="cnot.tfc" />
     <None Include="cnot1id1.tfc" />
     <None Include="cnotc.tfc" />
+    <None Include="cnotid_idcnot.tfc" />
+    <None Include="cnotcnot.tfc" />
+    <None Include="cnotnot.tfc" />
     <None Include="id1.tfc" />
     <None Include="id1cnot1.tfc" />
     <None Include="id1not1.tfc" />
     <None Include="id1not1id1.tfc" />
     <None Include="id2.tfc" />
     <None Include="id3.tfc" />
+    <None Include="idcnot_idcnot.tfc" />
     <None Include="not.tfc" />
     <None Include="not1id1.tfc" />
     <None Include="notc.tfc" />
     <None Include="notcc.tfc" />
+    <None Include="notnot.tfc" />
     <None Include="packages.config" />
     <None Include="rd32.tfc" />
     <None Include="toffoli.tfc" />
